samples/_failures_safe/1761335201_50faf2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2a59009.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c2a59009.c:172: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c2a59009.c:171:9: error: expected declaration or statement at end of input
  171 |         for
      |         ^~~
./samples/SAFE/__tmp_c2a59009.c:171:9: error: expected declaration or statement at end of input
